Improve restore table and shard selection
