# ChoboWeb/openapi/chobo.v1.json
@@ -3839,6 +3839,14 @@
           },
           "schemaOnly": {
             "type": "boolean"
+          },
+          "sourceShards": {
+            "type": "array",
+            "items": {
+              "type": "integer",
+              "format": "int32"
+            },
+            "nullable": true
           }
         },
         "additionalProperties": false
